cpp/zad2/error_log.txt
main.cpp:29:26: warning: missing terminating ' character
   29 |         plik<<nowe + "\n"';
      |                          ^
main.cpp:29:26: error: missing terminating ' character
   29 |         plik<<nowe + "\n"';
      |                          ^~
main.cpp: In function ‘int main()’:
main.cpp:24:18: error: invalid conversion from ‘const char*’ to ‘char’ [-fpermissive]
   24 |         char x = "t";
      |                  ^~~
      |                  |
      |                  const char*
main.cpp:29:26: error: expected ‘;’ before ‘}’ token
   29 |         plik<<nowe + "\n"';
      |                          ^
      |                          ;
   30 | }
      | ~                         
